--- a/package/Windows/NSIS.template.in
+++ b/package/Windows/NSIS.template.in
@@ -1,5 +1,5 @@
 ;--------------------------------
-; LifeStuff installation script
+; Cloud Encryptor installation script
 ;--------------------------------
 
 ;--------------------------------
@@ -36,7 +36,7 @@
 ; Configuration
 
   Name "@CPACK_NSIS_PACKAGE_NAME@"
-  Caption "LifeStuff ${VERSION} Setup"
+  Caption "Cloud Encryptor ${VERSION} Setup"
 
   OutFile "@CPACK_TOPLEVEL_DIRECTORY@/@CPACK_OUTPUT_FILE_NAME@"
 
@@ -63,6 +63,12 @@
   Var IS_ADMIN
   Var USER_NAME
 
+  Var SetupChunkDialog
+  Var ChunkText
+  Var ChunkString
+  Var ChunkBrowse
+  Var TempString
+
   Var un.REMOVE_ALL_USERS
   Var un.REMOVE_CURRENT_USER
 
@@ -78,11 +84,12 @@
   !define MUI_HEADERIMAGE
   !define MUI_HEADERIMAGE_LEFT
   @CPACK_NSIS_EXTRA_INSTALL_COMMANDS@
-  !define MUI_WELCOMEPAGE_TITLE "Welcome to the LifeStuff ${VERSION} Setup Wizard"
-  !define MUI_WELCOMEPAGE_TEXT "LifeStuff enables you to store unlimited data, like movies, photos and music on the world's most secure private cloud.$\r$\n$\r$\nLifeStuff ensures your data will never get corrupted, never get lost, never get hacked and never get a virus.$\r$\n$\r$\nAnd here’s the really cool bit...$\r$\n$\r$\nIt’s totally free!$\r$\n$\r$\nIt wont cost you a cent!$\r$\n$\r$\nClick $\"next$\" to install LifeStuff now..."
+  !define MUI_WELCOMEPAGE_TITLE "Welcome to the Cloud Encryptor ${VERSION} Setup Wizard"
+  !define MUI_WELCOMEPAGE_TEXT "Cloud Encryptor... install now..."
   !insertmacro MUI_PAGE_WELCOME
   !insertmacro MUI_PAGE_LICENSE "@CPACK_RESOURCE_FILE_LICENSE@"
   !define MUI_PAGE_CUSTOMFUNCTION_SHOW PreInstallPage
+  Page custom PageSetupChunkStore PageSetupChunkStoreLeave
   !define MUI_PAGE_CUSTOMFUNCTION_LEAVE PostInstallPage
   !insertmacro MUI_PAGE_INSTFILES
   !define MUI_FINISHPAGE_LINK "Visit http://maidsafe.net"
@@ -403,7 +410,7 @@ FunctionEnd
 
 Function CheckIfRunning
 
-  Push "lifestuff.exe"
+  Push "@CPACK_NSIS_INSTALLED_ICON_NAME@"
   Call IsProcessRunning
   Pop $R1
 
@@ -423,7 +430,7 @@ Function CheckIfRunning
 
     Sleep 500
 
-    Push "lifestuff.exe"
+    Push "@CPACK_NSIS_INSTALLED_ICON_NAME@"
     Call IsProcessRunning
     Pop $R1
 
@@ -431,15 +438,15 @@ Function CheckIfRunning
 
   ${EndWhile}
 
-  Push "lifestuff.exe"
+  Push "@CPACK_NSIS_INSTALLED_ICON_NAME@"
   Call IsProcessRunning
   Pop $R1
 
   ${While} $R1 == 1
 
-    MessageBox MB_RETRYCANCEL|MB_USERICON|MB_DEFBUTTON1 "LifeStuff appears to be running. Please close all running instances of LifeStuff before continuing the installation." IDCANCEL cancel IDRETRY retry
+    MessageBox MB_RETRYCANCEL|MB_USERICON|MB_DEFBUTTON1 "Cloud Encryptor appears to be running. Please close all running instances of Cloud Encryptor before continuing the installation." IDCANCEL cancel IDRETRY retry
     retry:
-    Push "lifestuff.exe"
+    Push "@CPACK_NSIS_INSTALLED_ICON_NAME@"
     Call IsProcessRunning
     Pop $R1
 
@@ -453,6 +460,60 @@ Function CheckIfRunning
 FunctionEnd
 
 Function PreInstallPage
+
+FunctionEnd
+
+Function PageSetupChunkStore
+
+  !insertmacro MUI_HEADER_TEXT "MaidSafe Cloud Encryptor Configuration" "Setup storage directory."
+
+  nsDialogs::Create /NOUNLOAD 1018
+  Pop $SetupChunkDialog
+
+  ${If} $SetupChunkDialog == error
+    Abort
+  ${EndIf}
+
+  ${NSD_CreateGroupBox} 0u 60u 100% 34u "Set storage location."
+  ${NSD_CreateText} 3% 75u 72% 13u $ChunkString
+  Pop $ChunkText
+  ${NSD_CreateBrowseButton} 78% 73u 19% 15u "Browse..."
+  Pop $ChunkBrowse
+  ${NSD_OnClick} $ChunkBrowse ChunkBrowseButtonClicked
+  ${NSD_OnChange} $ChunkText ChunkTextChanged
+
+  Call ChunkTextChanged
+  nsDialogs::Show
+
+FunctionEnd
+
+Function PageSetupChunkStoreLeave
+
+  CreateDirectory $APPDATA\MaidSafe\CloudEncryptor
+  ClearErrors
+  FileOpen $0 $APPDATA\MaidSafe\CloudEncryptor\cloud_encryptor.conf w
+  IfErrors done
+    FileWrite $0 "chunkdir = $ChunkString$\n"
+  FileClose $0
+  done:
+
+FunctionEnd
+
+Function ChunkBrowseButtonClicked
+
+  nsDialogs::SelectFolderDialog "Select directory where encrypted data should be stored."
+  Pop $TempString
+  StrCmp $TempString "error" leave
+  StrCpy $ChunkString $TempString
+  ${NSD_SetText} $ChunkText $ChunkString
+  leave:
+
+FunctionEnd
+
+Function ChunkTextChanged
+
+  ${NSD_GetText} $ChunkText $ChunkString
+  StrCpy $0 $ChunkString
 
 FunctionEnd
 
@@ -511,7 +572,7 @@ FunctionEnd
 Section -post
 
   SetDetailsPrint textonly
-  DetailPrint "Installing LifeStuff Files..."
+  DetailPrint "Installing Cloud Encryptor Files..."
   SetDetailsPrint listonly
   SetOutPath $INSTDIR
   @CPACK_NSIS_FULL_INSTALL@
@@ -520,16 +581,16 @@ Section -post
   DetailPrint "Creating start menu items..."
   SetDetailsPrint listonly
   CreateDirectory "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@"
-  CreateShortCut "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\LifeStuff.lnk" "$INSTDIR\@CPACK_NSIS_INSTALLED_ICON_NAME@"
+  CreateShortCut "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\CloudEncryptor.lnk" "$INSTDIR\@CPACK_NSIS_INSTALLED_ICON_NAME@"
   CreateShortCut "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\Uninstall.lnk" "$INSTDIR\Uninstall.exe"
-  WriteINIStr "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\About LifeStuff.url" "InternetShortcut" "URL" "@CPACK_NSIS_URL_INFO_ABOUT@"
+  WriteINIStr "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\About CloudEncryptor.url" "InternetShortcut" "URL" "@CPACK_NSIS_URL_INFO_ABOUT@"
   Push "StartMenu"
   Push "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@"
   Call ConditionalAddToRegisty
 
-  CreateShortCut "$DESKTOP\LifeStuff.lnk" "$INSTDIR\@CPACK_NSIS_INSTALLED_ICON_NAME@"  
+  CreateShortCut "$DESKTOP\CloudEncryptor.lnk" "$INSTDIR\@CPACK_NSIS_INSTALLED_ICON_NAME@"
   Push "InstallToDesktop"
-  Push "$DESKTOP\LifeStuff.lnk"
+  Push "$DESKTOP\CloudEncryptor.lnk"
   Call ConditionalAddToRegisty
 
   SetOutPath "$INSTDIR"
@@ -584,14 +645,6 @@ Section -post
   Call ConditionalAddToRegisty
 
   SetDetailsPrint textonly
-  DetailPrint "Creating service..."
-  SetDetailsPrint listonly
-  nsExec::ExecToStack '"$SYSDIR\sc.exe" create "LifeStuffManager" type= "own" start= "auto" binpath= "$INSTDIR\lifestuff_mgr.exe" DisplayName= "LifeStuff Manager"'
-  nsExec::ExecToStack '"$SYSDIR\sc.exe" description "LifeStuffManager" "Provides management services for LifeStuff Vaults and Clients on this machine and monitors the health of LifeStuff Vaults."'
-  nsExec::ExecToStack '"$SYSDIR\sc.exe" failure "LifeStuffManager" reset= "86400" actions= "restart/60000/restart/60000/restart/60000"'
-  nsExec::ExecToStack '"$SYSDIR\sc.exe" failureflag flag="1"'
-  nsExec::ExecToStack '"$SYSDIR\sc.exe" start "LifeStuffManager"'
-  SetDetailsPrint textonly
   DetailPrint "Installing filesystem driver..."
   SetDetailsPrint listonly
   Push $0
@@ -602,9 +655,9 @@ Section -post
   no_reboot:
   Pop $0
 
-  CreateDirectory $APPDATA\maidsafe\lifestuff
+  CreateDirectory $APPDATA\Maidsafe\CloudEncryptor
 
-  WriteRegStr HKEY_LOCAL_MACHINE "Software\Microsoft\Windows\CurrentVersion\Run" "LifeStuff" "$INSTDIR\@CPACK_NSIS_INSTALLED_ICON_NAME@"
+  WriteRegStr HKEY_LOCAL_MACHINE "Software\Microsoft\Windows\CurrentVersion\Run" "CloudEncryptor" "$INSTDIR\@CPACK_NSIS_INSTALLED_ICON_NAME@"
   
   WriteUninstaller "$INSTDIR\Uninstall.exe"
 
@@ -851,7 +904,7 @@ FunctionEnd
 
 Function un.CheckIfRunning
 
-  Push "lifestuff.exe"
+  Push "@CPACK_NSIS_INSTALLED_ICON_NAME@"
   Call un.IsProcessRunning
   Pop $R1
 
@@ -871,7 +924,7 @@ Function un.CheckIfRunning
 
     Sleep 500
 
-    Push "lifestuff.exe"
+    Push "@CPACK_NSIS_INSTALLED_ICON_NAME@"
     Call un.IsProcessRunning
     Pop $R1
 
@@ -879,15 +932,15 @@ Function un.CheckIfRunning
 
   ${EndWhile}
 
-  Push "lifestuff.exe"
+  Push "@CPACK_NSIS_INSTALLED_ICON_NAME@"
   Call un.IsProcessRunning
   Pop $R1
 
   ${While} $R1 == 1
 
-    MessageBox MB_RETRYCANCEL|MB_USERICON|MB_DEFBUTTON1 "LifeStuff appears to be running. Please close all running instances of LifeStuff before continuing the installation." IDCANCEL cancel IDRETRY retry
+    MessageBox MB_RETRYCANCEL|MB_USERICON|MB_DEFBUTTON1 "Cloud Encryptor appears to be running. Please close all running instances of Cloud Encryptor before continuing the installation." IDCANCEL cancel IDRETRY retry
     retry:
-    Push "lifestuff.exe"
+    Push "@CPACK_NSIS_INSTALLED_ICON_NAME@"
     Call un.IsProcessRunning
     Pop $R1
 
@@ -907,7 +960,7 @@ Function un.onInit
 
   ${If} $un.REMOVE_ALL_USERS == 1
   ${AndIf} $IS_ADMIN == 0
-    MessageBox MB_ICONSTOP "LifeStuff has been installed for all users.$\nPlease restart the uninstaller with Administrator privileges to remove it." /SD IDOK
+    MessageBox MB_ICONSTOP "Cloud Encryptor has been installed for all users.$\nPlease restart the uninstaller with Administrator privileges to remove it." /SD IDOK
     Abort
   ${EndIf}
 
@@ -924,11 +977,6 @@ Section "Uninstall"
     SetShellVarContext current
   ${EndIf}
 
-  SetDetailsPrint textonly
-  DetailPrint "Deleting service..."
-  SetDetailsPrint listonly
-  nsExec::ExecToStack '"$SYSDIR\sc.exe" stop "LifeStuffManager"'
-  nsExec::ExecToStack '"$SYSDIR\sc.exe" delete "LifeStuffManager"'
   SetDetailsPrint textonly
   DetailPrint "Uninstalling filesystem driver..."
   SetDetailsPrint listonly
@@ -970,14 +1018,14 @@ Section "Uninstall"
   @CPACK_NSIS_DELETE_ICONS@
   @CPACK_NSIS_DELETE_ICONS_EXTRA@
 
-  Delete "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\LifeStuff.lnk"
+  Delete "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\CloudEncryptor.lnk"
   Delete "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\Uninstall.lnk"
-  Delete "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\About LifeStuff.lnk"
+  Delete "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@\About CloudEncryptor.lnk"
   RMDir /r "$SMPROGRAMS\@CPACK_NSIS_PACKAGE_NAME@"
 
-  Delete "$DESKTOP\LifeStuff.lnk"
+  Delete "$DESKTOP\CloudEncryptor.lnk"
 
-  DeleteRegValue SHCTX "Software\Microsoft\Windows\CurrentVersion\Run" "LifeStuff"
+  DeleteRegValue SHCTX "Software\Microsoft\Windows\CurrentVersion\Run" "CloudEncryptor"
 
   SetDetailsPrint both
 
@@ -989,7 +1037,7 @@ Function .onInit
 
   Call GetUserInfo
   ${If} $IS_ADMIN == 0
-    MessageBox MB_ICONSTOP "LifeStuff cannot be installed.$\nPlease restart the installer with Administrator privileges." /SD IDOK
+    MessageBox MB_ICONSTOP "Cloud Encryptor cannot be installed.$\nPlease restart the installer with Administrator privileges." /SD IDOK
     Abort
   ${EndIf}
 
@@ -1001,15 +1049,13 @@ Function .onInit
 	Call CheckIfRunning
 	Call CompareVersion
     ${If} $PREVIOUS_VERSION_STATUS == 0
-      MessageBox MB_OKCANCEL|MB_USERICON|MB_DEFBUTTON2 "LifeStuff ${VERSION} is already installed. Click OK to reinstall LifeStuff or Cancel to stop the installation." IDOK ok IDCANCEL cancel
+      MessageBox MB_OKCANCEL|MB_USERICON|MB_DEFBUTTON2 "Cloud Encryptor ${VERSION} is already installed. Click OK to reinstall Cloud Encryptor or Cancel to stop the installation." IDOK ok IDCANCEL cancel
       cancel:
         Quit
       ok:
-        nsExec::ExecToStack '"$SYSDIR\sc.exe" stop "LifeStuffManager"'
     ${ElseIf} $PREVIOUS_VERSION_STATUS == 1
-      nsExec::ExecToStack '"$SYSDIR\sc.exe" stop "LifeStuffManager"'
     ${ElseIf} $PREVIOUS_VERSION_STATUS == 2
-      MessageBox MB_OK|MB_USERICON|MB_DEFBUTTON1 "A newer version of LifeStuff is already installed! It is not recommended that you install an older version. If you really want to install this version, please uninstall the current version first."
+      MessageBox MB_OK|MB_USERICON|MB_DEFBUTTON1 "A newer version of Cloud Encryptor is already installed! It is not recommended that you install an older version. If you really want to install this version, please uninstall the current version first."
       Quit
     ${Else}
       Abort
